# python-playgrounds

Basic/: DataclassesJson.py  Func.py  Hello.py  Json.py  lambda.py
Flask/: pyproject.toml
Flask/flaskr/: __init__.py  blog.py  db.py
Flask1/flask1/: UserApi.py  __init__.py
Flask2/: Flask.py  api1.py  api2.py  demo_api.py  filter.py
estate/: __init__.py
